@startuml mpd-carvault
!pragma layout smetana
title CarVault — Modèle Physique de Données (MPD)\nSGBD : PostgreSQL 15+ | Encodage : UTF-8
skinparam linetype ortho
skinparam shadowing false
skinparam roundcorner 8
skinparam class {
  BackgroundColor #fafafa
  BorderColor #0b0b0f
  ArrowColor #22c55e
  FontSize 11
}

hide methods
hide circle

' ─── Tables physiques ─────────────────────────────────────────────────────

entity "utilisateurs" as utilisateurs {
  **PK** id : TEXT NOT NULL
  --
  email : TEXT NOT NULL <<UNIQUE>>
  password : TEXT NOT NULL
  firstName : TEXT NOT NULL
  lastName : TEXT NOT NULL
  avatar : TEXT NULL
  notifEmail : BOOLEAN NOT NULL DEFAULT true
  notifPush : BOOLEAN NOT NULL DEFAULT false
  notifWeekly : BOOLEAN NOT NULL DEFAULT true
  isPremium : BOOLEAN NOT NULL DEFAULT false
  premiumSource : TEXT NULL
  stripeCustomerId : TEXT NULL
  stripeSubscriptionId : TEXT NULL
  premiumExpiresAt : TIMESTAMP(3) NULL
  createdAt : TIMESTAMP(3) NOT NULL DEFAULT now()
  updatedAt : TIMESTAMP(3) NOT NULL
  ..
  **IDX** utilisateurs_stripeSubscriptionId_idx
}

entity "vehicules" as vehicules {
  **PK** id : TEXT NOT NULL
  **FK** userId : TEXT NOT NULL → utilisateurs(id) CASCADE
  --
  brand : TEXT NOT NULL
  model : TEXT NOT NULL
  year : INTEGER NOT NULL
  mileage : INTEGER NOT NULL DEFAULT 0
  purchaseMileage : INTEGER NULL
  photo : TEXT NULL
  licensePlate : TEXT NULL
  color : TEXT NULL
  fuelType : FuelType NOT NULL DEFAULT 'GASOLINE'
  purchasePrice : DOUBLE PRECISION NULL
  carapiTrimId : INTEGER NULL
  msrp : DOUBLE PRECISION NULL
  horsepower : INTEGER NULL
  engineSize : DOUBLE PRECISION NULL
  transmission : TEXT NULL
  bodyType : TEXT NULL
  doors : INTEGER NULL
  fiscalPower : INTEGER NULL
  co2 : INTEGER NULL
  critAir : INTEGER NULL
  firstRegistrationDate : TIMESTAMP(3) NULL
  laCentraleVersionId : INTEGER NULL
  estimatedValue : DOUBLE PRECISION NULL
  maintenanceConfig : JSONB NULL
  maintenanceLastKm : JSONB NULL
  monthlyFuelBudget : DOUBLE PRECISION NULL
  annualKmGoal : INTEGER NULL
  createdAt : TIMESTAMP(3) NOT NULL DEFAULT now()
  updatedAt : TIMESTAMP(3) NOT NULL
  ..
  **IDX** vehicules_userId_idx
}

entity "documents" as documents {
  **PK** id : TEXT NOT NULL
  **FK** vehicleId : TEXT NOT NULL → vehicules(id) CASCADE
  --
  name : TEXT NOT NULL
  type : DocumentType NOT NULL
  filePath : TEXT NOT NULL
  fileName : TEXT NOT NULL
  expirationDate : TIMESTAMP(3) NULL
  notes : TEXT NULL
  reminderDays : INTEGER[] NOT NULL DEFAULT '{30,7}'
  createdAt : TIMESTAMP(3) NOT NULL DEFAULT now()
  updatedAt : TIMESTAMP(3) NOT NULL
  ..
  **IDX** documents_vehicleId_idx
  **IDX** documents_vehicleId_expirationDate_idx
}

entity "depenses" as depenses {
  **PK** id : TEXT NOT NULL
  **FK** vehicleId : TEXT NOT NULL → vehicules(id) CASCADE
  --
  amount : DOUBLE PRECISION NOT NULL
  category : ExpenseCategory NOT NULL
  date : TIMESTAMP(3) NOT NULL
  description : TEXT NULL
  mileage : INTEGER NULL
  createdAt : TIMESTAMP(3) NOT NULL DEFAULT now()
  updatedAt : TIMESTAMP(3) NOT NULL
  ..
  **IDX** depenses_vehicleId_date_idx
}

entity "alertes" as alertes {
  **PK** id : TEXT NOT NULL
  **FK** userId : TEXT NOT NULL → utilisateurs(id) CASCADE
  --
  title : TEXT NOT NULL
  message : TEXT NOT NULL
  type : AlertType NOT NULL
  isRead : BOOLEAN NOT NULL DEFAULT false
  dueDate : TIMESTAMP(3) NULL
  snoozedUntil : TIMESTAMP(3) NULL
  emailSent : BOOLEAN NOT NULL DEFAULT false
  createdAt : TIMESTAMP(3) NOT NULL DEFAULT now()
  ..
  **IDX** alertes_userId_idx
  **IDX** alertes_userId_isRead_idx
}

entity "entrees_kilometrage" as entrees_km {
  **PK** id : TEXT NOT NULL
  **FK** vehicleId : TEXT NOT NULL → vehicules(id) CASCADE
  --
  mileage : INTEGER NOT NULL
  date : TIMESTAMP(3) NOT NULL
  notes : TEXT NULL
  createdAt : TIMESTAMP(3) NOT NULL DEFAULT now()
  ..
  **IDX** entrees_kilometrage_vehicleId_idx
}

entity "entrees_carburant" as entrees_carb {
  **PK** id : TEXT NOT NULL
  **FK** vehicleId : TEXT NOT NULL → vehicules(id) CASCADE
  --
  date : TIMESTAMP(3) NOT NULL
  mileage : INTEGER NOT NULL
  liters : DOUBLE PRECISION NOT NULL
  pricePerLiter : DOUBLE PRECISION NOT NULL
  totalCost : DOUBLE PRECISION NOT NULL
  isFull : BOOLEAN NOT NULL DEFAULT true
  notes : TEXT NULL
  createdAt : TIMESTAMP(3) NOT NULL DEFAULT now()
  ..
  **IDX** entrees_carburant_vehicleId_date_idx
}

entity "abonnements_push" as abonnements_push {
  **PK** id : TEXT NOT NULL
  **FK** userId : TEXT NOT NULL → utilisateurs(id) CASCADE
  --
  endpoint : TEXT NOT NULL
  p256dh : TEXT NOT NULL
  auth : TEXT NOT NULL
  createdAt : TIMESTAMP(3) NOT NULL DEFAULT now()
  ..
  **UQ** (userId, endpoint)
  **IDX** abonnements_push_userId_idx
}

entity "liens_partage" as liens_partage {
  **PK** id : TEXT NOT NULL
  **FK** vehicleId : TEXT NOT NULL → vehicules(id) CASCADE
  **FK** userId : TEXT NOT NULL → utilisateurs(id) CASCADE
  --
  token : TEXT NOT NULL UNIQUE DEFAULT uuid()
  expiresAt : TIMESTAMP(3) NULL
  createdAt : TIMESTAMP(3) NOT NULL DEFAULT now()
  viewCount : INTEGER NOT NULL DEFAULT 0
  lastViewedAt : TIMESTAMP(3) NULL
  passwordHash : TEXT NULL
  hidePurchasePrice : BOOLEAN NOT NULL DEFAULT false
  label : TEXT NULL
  ..
  **IDX** liens_partage_vehicleId_userId_idx
}

entity "refresh_tokens" as refresh_tokens {
  **PK** id : TEXT NOT NULL
  **FK** userId : TEXT NOT NULL → utilisateurs(id) CASCADE
  --
  token : TEXT NOT NULL UNIQUE
  expiresAt : TIMESTAMP(3) NOT NULL
  createdAt : TIMESTAMP(3) NOT NULL DEFAULT now()
  ..
  **IDX** refresh_tokens_userId_idx
}

entity "password_reset_tokens" as pwd_reset {
  **PK** id : TEXT NOT NULL
  **FK** userId : TEXT NOT NULL → utilisateurs(id) CASCADE
  --
  token : TEXT NOT NULL UNIQUE
  expiresAt : TIMESTAMP(3) NOT NULL
  createdAt : TIMESTAMP(3) NOT NULL DEFAULT now()
  ..
  **IDX** password_reset_tokens_userId_idx
}

' ─── Types énumérés PostgreSQL ───────────────────────────────────────────

package "Types ENUM natifs" <<Rectangle>> #fff8e6 {
  class DocumentType <<enumeration>> {
    INSURANCE
    TECHNICAL_INSPECTION
    INVOICE
    WARRANTY
    REGISTRATION
    ACCIDENT_REPORT
    OTHER
  }
  class ExpenseCategory <<enumeration>> {
    MAINTENANCE | OIL_CHANGE | BRAKES
    TIRES | BODYWORK | WINDSHIELD
    TECHNICAL_INSPECTION | PARKING | TOLL
    CLEANING | FINE | OTHER
  }
  class AlertType <<enumeration>> {
    DOCUMENT_EXPIRY | MAINTENANCE_DUE
    INSPECTION_DUE | INSURANCE_RENEWAL
    OIL_CHANGE | TIRE_SEASON | MILEAGE_SERVICE
    ZFE_RESTRICTION | BUDGET_SPIKE | COST_PER_KM
    FUEL_BUDGET_EXCEEDED | KM_RECORD | CO2_MALUS
    FUEL_PRICE_DROP | OTHER
  }
  class FuelType <<enumeration>> {
    GASOLINE | DIESEL | HYBRID
    ELECTRIC | LPG | OTHER
  }
}

' ─── Intégrité référentielle ─────────────────────────────────────────────

utilisateurs ||--o{ vehicules
utilisateurs ||--o{ alertes
utilisateurs ||--o{ abonnements_push
utilisateurs ||--o{ refresh_tokens
utilisateurs ||--o{ pwd_reset
utilisateurs ||--o{ liens_partage

vehicules ||--o{ documents
vehicules ||--o{ depenses
vehicules ||--o{ entrees_km
vehicules ||--o{ entrees_carb
vehicules ||--o{ liens_partage

note bottom of utilisateurs
  **Légende MPD**
  • TEXT = VARCHAR (UUID générés côté app Prisma)
  • TIMESTAMP(3) = précision milliseconde
  • JSONB = configuration entretien / baselines km
  • Toutes les FK : ON DELETE CASCADE
  • ORM : Prisma Client | Migrations versionnées
end note

@enduml
